@@ -22,10 +22,10 @@
 package io.crate.analyze.validator;
 
 import io.crate.analyze.symbol.Function;
-import io.crate.analyze.symbol.Literal;
 import io.crate.analyze.symbol.MatchPredicate;
 import io.crate.analyze.symbol.Symbol;
 import io.crate.analyze.symbol.SymbolVisitor;
+import io.crate.analyze.symbol.Symbols;
 import io.crate.analyze.symbol.format.SymbolPrinter;
 import io.crate.types.DataTypes;
 
@@ -35,7 +35,6 @@ import java.util.Locale;
 public class GroupBySymbolValidator {
 
     private final static InnerValidator INNER_VALIDATOR = new InnerValidator();
-    private final static LiteralVisitor LITERAL_VISITOR = new LiteralVisitor();
 
     public static void validate(Symbol symbol) throws IllegalArgumentException, UnsupportedOperationException {
         INNER_VALIDATOR.process(symbol, null);
@@ -57,7 +56,7 @@ public class GroupBySymbolValidator {
             switch (function.info().type()) {
                 case SCALAR:
                     // If is literal no further datatype validation is required
-                    if (LITERAL_VISITOR.process(function, null)) {
+                    if (Symbols.allLiterals(function)) {
                         return null;
                     }
 
@@ -87,7 +86,7 @@ public class GroupBySymbolValidator {
         @Override
         protected Void visitSymbol(Symbol symbol, @Nullable Function parentScalar) {
             // If is literal no further datatype validation is required
-            if (LITERAL_VISITOR.process(symbol, null)) {
+            if (Symbols.allLiterals(symbol)) {
                 return null;
             }
 
@@ -100,28 +99,4 @@ public class GroupBySymbolValidator {
         }
     }
 
-    /**
-     * Returns true if all symbols in an expression are literals and false otherwise.
-     */
-    private static class LiteralVisitor extends SymbolVisitor<Void, Boolean> {
-
-        @Override
-        public Boolean visitFunction(Function function, Void context) {
-            boolean result = true;
-            for (Symbol arg: function.arguments()) {
-                result &= process(arg, null);
-            }
-            return result;
-        }
-
-        @Override
-        public Boolean visitLiteral(Literal symbol, Void context) {
-            return true;
-        }
-
-        @Override
-        public Boolean visitSymbol(Symbol symbol, Void context) {
-            return false;
-        }
-    }
 }
